--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationGroupView.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationGroupView.mxml
@@ -32,6 +32,8 @@
     <!-- Scripts -->
     <mx:Script>
         <![CDATA[
+        	import org.openwms.web.flex.client.model.TreeNode;
+        	import org.openwms.common.domain.values.LocationGroupState;
         	import org.openwms.web.flex.client.common.event.CommonSwitchScreenEvent;
             import org.openwms.common.domain.LocationGroup;
             import org.openwms.web.flex.client.event.SwitchScreenEvent;
@@ -53,6 +55,14 @@
 
             [Bindable]
             private var selectedLocations : ArrayCollection = new ArrayCollection();
+
+            [Bindable]
+            [Embed("/assets/images/LocationGroup.png")]
+            private var nodeIcon:Class;
+
+            [Bindable]
+            [Embed("/assets/images/LocationGroup--Leaf.png")]
+            private var leafIcon:Class;
 
             private function onShow() : void {
                 if (commonModelLocator.allLocationGroups.length == 0) {
@@ -76,8 +86,10 @@
             }
 
             public function onTreeClick(event : Event) : void {
-                selectedLocationGroup = (event.target.selectedItem.getData()) as LocationGroup;
+                selectedLocationGroup = event.target.selectedItem.getData() as LocationGroup;
                 selectedParent = findLocationGroup();
+                groupStateInCmb.selectedIndex = LocationGroupState.constants.indexOf(selectedLocationGroup.groupStateIn);
+                groupStateOutCmb.selectedIndex = LocationGroupState.constants.indexOf(selectedLocationGroup.groupStateOut);
                 showLocations();
             }
 
@@ -113,9 +125,25 @@
                 return "--";
             }
 
-            private function refresh() : void {
-                var event : CommonSwitchScreenEvent = new CommonSwitchScreenEvent(CommonSwitchScreenEvent.SHOW_LOCATIONGROUP_VIEW);
+            private function saveLocationGroup():void {
+                var event:LocationGroupEvent = new LocationGroupEvent(LocationGroupEvent.SAVE_LOCATION_GROUP);
+                event.data = selectedLocationGroup;
                 dispatchEvent(event);
+            }
+
+            private function refresh() : void {
+                dispatchEvent(new LocationGroupEvent(LocationGroupEvent.LOAD_ALL_LOCATION_GROUPS));
+            }
+
+            private function switchView(e:Event) : void {
+                // fire event
+            }
+
+            private function getTreeIcon(item:Object):Class {
+            	if ((item as TreeNode).children == null) {
+            		return leafIcon;
+            	}
+                return nodeIcon;
             }
         ]]>
     </mx:Script>
@@ -124,32 +152,43 @@
         <mx:Label x="10" y="10" text="Location Groups" fontSize="24"/>
         <mx:VRule height="10"/>
         <mx:Button id="refreshBtn" buttonMode="true" mouseChildren="false" toolTip="Refresh Location Groups" icon="@Embed(source='assets/images/icons/refresh.png')" click="refresh()"/>
+        <mx:VRule height="10"/>
+        <mx:Button id="saveLocationGroupBtn" buttonMode="true" mouseChildren="false" toolTip="Save an existing Location Group" icon="@Embed(source='/assets/images/Location--Save.png')" click="saveLocationGroup()"/>
     </mx:HBox>
     <mx:HRule x="10" y="53" width="95%"/>
     <mx:HBox x="10" y="63" verticalAlign="top" height="100%" width="95%">
 
-        <mx:Tree id="myTree" showRoot="false" width="236" dataProvider="{commonModelLocator.locationGroupTree}" dataDescriptor="{new TreeDataDescriptor()}" labelFunction="locationGroupLabel" change="onTreeClick(event)" height="95%">
+        <mx:Tree id="myTree" showRoot="false" width="236" iconFunction="getTreeIcon" dataProvider="{commonModelLocator.locationGroupTree}" dataDescriptor="{new TreeDataDescriptor()}" labelFunction="locationGroupLabel" change="onTreeClick(event)" height="95%">
         </mx:Tree>
         <mx:Canvas width="100%" height="95%">
-            <x:XPanel x="0" y="0" width="100%" height="300" layout="absolute" title="Details" titleIcon="@Embed(source='/assets/images/LocationGroup.png')" toolTipBtn1="Refresh" onClickBtn1="refresh" iconBtn1="@Embed(source='assets/images/icons/refresh.png')">
-                <mx:CheckBox x="190" y="146" label="Infeed allowed"/>
-                <mx:CheckBox x="305" y="146" label="Outfeed allowed"/>
-                <mx:CheckBox x="190" y="176" label="Counting active"/>
+            <x:XPanel x="0" y="0" width="100%" height="300" layout="absolute" title="Details" titleIcon="@Embed(source='/assets/images/LocationGroup.png')" toolTipBtn1="Switch View" onClickBtn1="switchView" iconBtn1="@Embed(source='assets/images/icons/switchView--small.png')">
+
                 <mx:HBox x="10" y="10" width="95%" height="25" borderStyle="solid" alpha="0.5" backgroundColor="#C2DAEF">
                     <mx:Label text="Location Group" fontSize="16" textDecoration="normal" width="170" textAlign="right" fontWeight="bold"/>
                     <mx:Label text="{selectedLocationGroup.name}" fontSize="16" textDecoration="normal" width="100%" toolTip="{selectedLocationGroup.name}"/>
                 </mx:HBox>
+
                 <mx:HBox x="10" y="43" width="95%" height="18">
                     <mx:Label text="Parent Location Group" width="170" textAlign="right"/>
                     <mx:Label text="{selectedParent}" width="100%"/>
                 </mx:HBox>
-                <mx:NumericStepper x="190" y="206" value="{selectedLocationGroup.maxFillLevel}" minimum="0" maximum="100" />
+
                 <mx:Label x="10" y="69" text="Description" textAlign="right" width="170"/>
+                <mx:TextArea x="188" y="68" width="200" text="{selectedLocationGroup.description}"/>
+
                 <mx:Label x="10" y="120" text="Group Type" textAlign="right" width="170"/>
-                <mx:Label x="10" y="234" text="System Code" textAlign="right" width="170"/>
-                <mx:Label x="10" y="208" text="Maximum Fill Level" textAlign="right" width="170"/>
-                <mx:TextArea x="190" y="68" width="200"/>
+                <mx:Label x="10" y="146" text="Infeed" textAlign="right" width="170"/>
+                <mx:Label x="10" y="176" text="Outfeed" textAlign="right" width="170"/>
                 <mx:Label text="{selectedLocationGroup.groupType}" width="100%" x="190" y="120"/>
+
+                <mx:ComboBox id="groupStateInCmb" x="188" y="144" dataProvider="{LocationGroupState.constants}" />
+                <mx:ComboBox id="groupStateOutCmb" x="188" y="174" editable="false" dataProvider="{LocationGroupState.constants}" />
+                <mx:CheckBox x="277" y="206" label="Counting active" selected="{selectedLocationGroup.locationGroupCountingActive}"/>
+
+                <mx:Label x="10" y="208" text="Maximum Fill Level" textAlign="right" width="170"/>
+                <mx:NumericStepper x="190" y="206" value="{selectedLocationGroup.maxFillLevel}" minimum="0" maximum="100" />
+
+                <mx:Label x="10" y="234" text="System Code" textAlign="right" width="170"/>
                 <mx:Label text="{selectedLocationGroup.systemCode}" width="100%" x="188" y="234"/>
             </x:XPanel>
             <mx:DataGrid id="locationsList" allowMultipleSelection="true" sortableColumns="true" x="0" y="341" width="100%" dataProvider="{selectedLocations}" height="100%">
