--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationTypeView.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationTypeView.mxml
@@ -31,6 +31,8 @@
 
     <mx:Script>
         <![CDATA[
+        	import org.openwms.web.flex.client.util.DisplayUtility;
+        	import org.openwms.web.flex.client.util.BindingProperty;
         	import mx.binding.utils.ChangeWatcher;
             import mx.binding.utils.BindingUtils;
             import mx.events.ListEvent;
@@ -93,18 +95,16 @@
                     ValidationUtil.validateAndFormat(widthTxt, numberVal) &&
                     ValidationUtil.validateAndFormat(heightTxt, numberVal)) {
                     	
-	                var cw1:ChangeWatcher = BindingUtils.bindProperty(selected, "length", lengthTxt, "text");
-	                var cw2:ChangeWatcher = BindingUtils.bindProperty(selected, "width", widthTxt, "text");
-	                var cw3:ChangeWatcher = BindingUtils.bindProperty(selected, "height", heightTxt, "text");
-	                var cw4:ChangeWatcher = BindingUtils.bindProperty(selected, "description", descriptionTxt, "text");
-                    var event:LocationTypeEvent = new LocationTypeEvent(LocationTypeEvent.SAVE_LOCATION_TYPE);
-                    event.data = selected;
-                    dispatchEvent(event);
-                    selected = null;
-                    cw1.unwatch();
-                    cw2.unwatch();
-                    cw3.unwatch();
-                    cw4.unwatch();
+                    var bindings:Array = [new BindingProperty(selected, "length", lengthTxt, "text"),
+                                          new BindingProperty(selected, "width", widthTxt, "text"),  
+                                          new BindingProperty(selected, "height", heightTxt, "text"),  
+                                          new BindingProperty(selected, "description", descriptionTxt, "text")];
+                    DisplayUtility.bindProperties(new ArrayCollection(bindings), function execute():void {
+                            var event:LocationTypeEvent = new LocationTypeEvent(LocationTypeEvent.SAVE_LOCATION_TYPE);
+                            event.data=selected;
+                            dispatchEvent(event);
+                        });
+                    selected = null;                            
                     changed = false;
                 }
             }
