--- a/org.openwms/trunk/source/org.openwms.client.flex.lib/src/main/flex/org/openwms/web/flex/client/component/ListDialog.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.lib/src/main/flex/org/openwms/web/flex/client/component/ListDialog.mxml
@@ -1,4 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+/*
+ * openwms.org, the Open Warehouse Management System.
+ *
+ * This file is part of openwms.org.
+ *
+ * openwms.org is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as 
+ * published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
+ *
+ * openwms.org is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this software. If not, write to the Free
+ * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+ * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
+ */
+-->
 <mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" creationComplete="init()" dropShadowEnabled="true" showCloseButton="true" close="onCancel(event)" width="342" height="261">
 
     <mx:Script>
@@ -9,47 +31,82 @@
             import flash.events.KeyboardEvent;
     		
     		[Bindable]
+    		/**
+    		 * Bind to a list of available items.
+    		 */
     		public var listToDisplay:ArrayCollection;
             [Bindable]
+            /**
+             * The list of selected items.
+             */
             public var selectedItems:ArrayCollection;
             [Bindable]
+            /**
+             * Text of the dialkogue header.
+             */
             public var panelHeaderText:String = "NO TITLE SET";
             [Bindable]
+            /**
+             * Text of the message hint.
+             */
             public var labelText:String = "NO LABEL SET";
             [Bindable]
+            /**
+             * Used as labelFunction for the list entries.
+             */
             public var formatFunction:Function;
             [Bindable]
+            /**
+             * Text of the submit button.
+             */
             public var submitBtnText:String = "Submit";
             [Bindable]
+            /**
+             * Text of the cancel button.
+             */
             public var cancelBtnText:String = "Cancel";
             [Bindable]
+            /**
+             * Should the dialogue been closed after submit?
+             */
             public var closeDialogOnSubmit:Boolean = true;
-            
+            /**
+             * Do initial things, like setting the focus and title text and register event handlers.
+             */
             protected function init():void {
             	this.title = panelHeaderText;
                 this.addEventListener(KeyboardEvent.KEY_DOWN, keyEventHandler);
                 PopUpManager.centerPopUp(this);
                 submitBtn.setFocus();
             }
-            
+            /**
+             * On form submit, update the list of selectedItems.
+             * 
+             * @param event A MouseEvent
+             */
             public function onSubmit(event:MouseEvent):void {
             	selectedItems = new ArrayCollection(list.selectedItems);
             	if (closeDialogOnSubmit) {
             		onCancel();
             	}
             }
-            
+            /**
+             * Pressing the cancel button will just close the dialog.
+             * 
+             * @param event An Event, can be <code>null</code>
+             */
             protected function onCancel(event:Event = null):void {
                 this.removeEventListener(KeyboardEvent.KEY_DOWN, keyEventHandler);
                 PopUpManager.removePopUp(this);
             } 
-            
+            /**
+             * Binding the CR key to the cancel operation.
+             * 
+             * @param event A KexboardEvent
+             */
             protected function keyEventHandler(event:KeyboardEvent):void {
-                if(event.keyCode == 27) {
-                   onCancel();
-                }
+                if(event.keyCode == 27) { onCancel(); }
             }
-
     	]]>
     </mx:Script>
 
