--- a/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/ModuleManagementView.mxml
+++ b/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/ModuleManagementView.mxml
@@ -39,7 +39,7 @@
             
             import mx.collections.ArrayCollection;
             import org.openwms.web.flex.client.module.ModuleLocator;
-            import org.openwms.common.domain.Module;
+            import org.openwms.core.domain.Module;
             import org.openwms.web.flex.client.event.ApplicationEvent;
             import org.openwms.web.flex.client.model.ModelLocator;
             import mx.events.ListEvent;
