--- a/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/RoleManagementView.mxml
+++ b/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/RoleManagementView.mxml
@@ -35,13 +35,13 @@
         	import org.openwms.web.flex.client.view.dialogs.AssignGrantsDialog;
         	import org.openwms.web.flex.client.event.ApplicationEvent;
         	import org.openwms.web.flex.client.event.UserEvent;
-        	import org.openwms.common.domain.system.usermanagement.SecurityObject;
+        	import org.openwms.core.domain.system.usermanagement.SecurityObject;
         	import org.openwms.web.flex.client.view.dialogs.AssignUsersDialog;
         	import org.openwms.web.flex.client.view.dialogs.ConfirmDeleteRoleDialog;
         	import mx.managers.PopUpManager;
         	import org.openwms.web.flex.client.view.dialogs.CreateRoleDialog;
-        	import org.openwms.common.domain.system.usermanagement.User;
-        	import org.openwms.common.domain.system.usermanagement.Role;
+        	import org.openwms.core.domain.system.usermanagement.User;
+        	import org.openwms.core.domain.system.usermanagement.Role;
             import mx.controls.Alert;
             import mx.controls.dataGridClasses.DataGridColumn;
             import mx.collections.ArrayCollection;
