--- a/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/AssignUsersDialog.mxml
+++ b/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/AssignUsersDialog.mxml
@@ -33,9 +33,9 @@
         	import mx.collections.Sort;
         	import mx.collections.SortField;
         	import mx.utils.ObjectUtil;
-        	import org.openwms.common.domain.system.usermanagement.User;
+        	import org.openwms.core.domain.system.usermanagement.User;
         	import org.openwms.web.flex.client.event.RoleEvent;
-        	import org.openwms.common.domain.system.usermanagement.Role;
+        	import org.openwms.core.domain.system.usermanagement.Role;
         	import org.openwms.web.flex.client.model.ModelLocator;
             import mx.collections.ListCollectionView;
             import mx.managers.PopUpManager;
