--- a/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/ChangePasswordDialog.mxml
+++ b/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/ChangePasswordDialog.mxml
@@ -34,7 +34,7 @@
     		import mx.controls.Alert;
     		import org.openwms.web.flex.client.event.UserEvent;
     		import org.openwms.web.flex.client.model.ModelLocator;
-    		import org.openwms.common.domain.system.usermanagement.User;
+    		import org.openwms.core.domain.system.usermanagement.User;
     		
     		[In]
             [Bindable]
