--- a/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/CreateRoleDialog.mxml
+++ b/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/CreateRoleDialog.mxml
@@ -34,7 +34,7 @@
     		import mx.binding.utils.BindingUtils;
     		import mx.controls.Alert;
     		import mx.events.ValidationResultEvent;
-    		import org.openwms.common.domain.system.usermanagement.Role;
+    		import org.openwms.core.domain.system.usermanagement.Role;
     		import org.openwms.web.flex.client.event.RoleEvent;
             import org.openwms.web.flex.client.model.ModelLocator;
 
