--- a/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserManagementContent.mxml
+++ b/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserManagementContent.mxml
@@ -43,8 +43,8 @@
             import mx.controls.Alert;
             import mx.core.BitmapAsset;
             import mx.validators.RegExpValidationResult;
-            import org.openwms.common.domain.system.usermanagement.User;
-            import org.openwms.common.domain.system.usermanagement.UserDetails$SEX;
+            import org.openwms.core.domain.system.usermanagement.User;
+            import org.openwms.core.domain.system.usermanagement.UserDetails$SEX;
             import org.openwms.web.flex.client.event.UserEvent;
             import org.openwms.web.flex.client.helper.UserHelper;
             import org.openwms.web.flex.client.model.ModelLocator;
