--- a/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
+++ b/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
@@ -44,13 +44,18 @@
         showBusyCursor="true"/>
 
     <granite:SecureRemoteObject
-        id="moduleManagementService"
-        destination="moduleManagementServiceRemote"
+        id="moduleService"
+        destination="moduleServiceRemote"
         showBusyCursor="true"/>
 
     <granite:SecureRemoteObject
         id="userService"
         destination="userServiceRemote"
+        showBusyCursor="true"/>
+
+    <granite:SecureRemoteObject
+        id="roleService"
+        destination="roleServiceRemote"
         showBusyCursor="true"/>
 
     <granite:SecureRemoteObject
