--- a/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/renderers/UserListRenderer.mxml
+++ b/org.openwms/trunk/app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/renderers/UserListRenderer.mxml
@@ -80,7 +80,7 @@
 		 */ 
 		private function setUserImage():void {
 			var asset:BitmapAsset;
-			if (UserHelper.haveDetails(userData)) {
+			if (UserHelper.hasDetails(userData)) {
 				if (userData.userDetails.image != null) {
 					img.data = userData.userDetails.image;
 					return;
